# mcp-hub

./: README.md  claude_desktop_config.json  create-mcp-server-template.sh  create_mcp_server.py  dump.rdb  main.py  mcp-  pyproject.toml
ai/computer-vision/: pyproject.toml  run.sh
ai/computer-vision/01_image_handling/: basic_manipulations.py  hello_cv.py  image_representation.py  read_display_save.py
ai/computer-vision/02_image_preprocessing/: augmentation.py  normalization.py
ai/computer-vision/03_feature_extraction/: hog_extraction.py  sift_surf_extraction.py
ai/computer-vision/04_basic_ml_concepts/: hog_svm_classifier.py
ai/computer-vision/05_deep_learning_cnn/: cnn_architecture.py
ai/computer-vision/06_image_classification/: train_classifier.py
ai/computer-vision/07_object_detection/: basic_object_detection.py
ai/computer-vision/08_image_segmentation/: basic_segmentation.py
ai/computer-vision/09_datasets/: download_cifar10.py
ai/computer-vision/10_utils/: image_utils.py
examples/prompts/: README.md  main.py  pyproject.toml
infra/: README.md
infra/dev-ops/: README.md
llm/: .env  mcp_server_rag.py  pyproject.toml  rag_engine.py
llm/agile_docs/: sample.txt
llm/doc_hub/: sample.txt
mcp-autopilot/: README.md  mcp-autopilot.py  pyproject.toml
mcp-client/: README.md
mcp-clients/: pyproject.toml
mcp-servers/cricket-news/: main.py
mcp-servers/cricket_news/: README.md
notebooks/: README.md  jupyterhub_config.py  pyproject.toml  start_jupyterhub.sh
notebooks/srv/jupyterhub/: jupyterhub.sqlite  jupyterhub_cookie_secret
(+26 files in other folders)
