[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.4",
    "databases[mssql]>=0.9.0",
    "fastapi>=0.115.9",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "openai>=1.74.0",
    "pip>=25.0.1",
    "pyodbc>=5.2.0",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.40",
    "tiktoken>=0.9.0",
    "unstructured>=0.17.2",
]
